--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Comunidade Treinadas para o Sucesso</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* Estilos globais */
     body {
@@ -101,6 +102,32 @@
       font-family: "Galano Classic", sans-serif;
       color: #ffffff;
       margin-top: 20px;
+    }
+
+    /* Estilos responsivos */
+    @media screen and (max-width: 600px) {
+      body {
+        background-image: none;
+        background-color: white;
+      }
+
+      .logo {
+        max-width: 200px;
+      }
+
+      .headline {
+        margin: 10px;
+      }
+
+      #video-container iframe {
+        width: 100%;
+        height: auto;
+      }
+
+      .action-button {
+        margin: 20px;
+        max-width: 300px;
+      }
     }
   </style>
 </head>
