--- a/index.html
+++ b/index.html
@@ -105,18 +105,19 @@
     }
 
     /* Estilos responsivos */
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 320px) {
       body {
         background-image: none;
         background-color: white;
       }
 
       .logo {
-        max-width: 200px;
+        max-width: 150px;
       }
 
       .headline {
         margin: 10px;
+        font-size: 14px;
       }
 
       #video-container iframe {
@@ -126,7 +127,8 @@
 
       .action-button {
         margin: 20px;
-        max-width: 300px;
+        max-width: 250px;
+        font-size: 14px;
       }
     }
   </style>
