--- a/index.html
+++ b/index.html
@@ -107,28 +107,31 @@
     /* Estilos responsivos */
     @media screen and (max-width: 320px) {
       body {
-        background-image: none;
-        background-color: white;
+      background-image: url('assets/img/capa.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-color: black;
       }
 
       .logo {
-        max-width: 150px;
+        max-width: 100px;
       }
 
       .headline {
         margin: 10px;
-        font-size: 14px;
+        font-size: 8px;
       }
 
       #video-container iframe {
-        width: 100%;
+        width: 50%;
         height: auto;
       }
 
       .action-button {
         margin: 20px;
         max-width: 250px;
-        font-size: 14px;
+        font-size: 18px;
       }
     }
   </style>
