--- a/index.html
+++ b/index.html
@@ -107,26 +107,28 @@
     /* Estilos responsivos */
     @media screen and (max-width: 320px) {
       body {
-      background-image: url('assets/img/capa.png');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-      background-color: black;
+        background-image: none;
+        background-color: white;
       }
 
       .logo {
-        max-width: 100px;
+        max-width: 150px;
       }
 
       .headline {
         margin: 10px;
-        font-size: 8px;
+        font-size: 14px;
+      }
+
+      #video-container iframe {
+        width: 400px;
+        height: 225px;
       }
 
       .action-button {
         margin: 20px;
-        max-width: 250px;
-        font-size: 18px;
+        max-width: 200px;
+        font-size: 12px;
       }
     }
   </style>
