--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Comunidade Treinadas para o Sucesso</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* Estilos globais */
     body {
@@ -103,34 +102,6 @@
       color: #ffffff;
       margin-top: 20px;
     }
-
-    /* Estilos responsivos */
-    @media screen and (max-width: 320px) {
-      body {
-        background-image: none;
-        background-color: white;
-      }
-
-      .logo {
-        max-width: 150px;
-      }
-
-      .headline {
-        margin: 10px;
-        font-size: 14px;
-      }
-
-      #video-container iframe {
-        width: 400px;
-        height: 225px;
-      }
-
-      .action-button {
-        margin: 20px;
-        max-width: 200px;
-        font-size: 12px;
-      }
-    }
   </style>
 </head>
 <body>
@@ -142,7 +113,7 @@
   
   <!-- Vídeo centralizado -->
   <div id="video-container">
-    <div style="position:relative;padding-top:56.25%;"><iframe id="panda-9967a7fc-eaf4-4641-87a4-1c50827a647c" src="https://player-vz-16f0bb92-9a3.tv.pandavideo.com.br/embed/?v=9967a7fc-eaf4-4641-87a4-1c50827a647c" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%" fetchpriority="high"></iframe></div>
+    <iframe id="panda-9967a7fc-eaf4-4641-87a4-1c50827a647c" src="https://player-vz-16f0bb92-9a3.tv.pandavideo.com.br/embed/?v=9967a7fc-eaf4-4641-87a4-1c50827a647c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
   </div>
 
   <!-- Botão de ação com delay em milissegundos -->
