--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Botão de ação com delay em milissegundos -->
-  <button class="action-button" onclick="delayedAction()">NÃO PERCA ESSA OPORTUNIDADE!</button>
+  <button class="action-button" onclick="delayedAction()">QUERO GARANTIR MINHA VAGA!</button>
 
   <script>
     function delayedAction() {
