--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <!-- Vídeo centralizado -->
   <div id="video-container">
-    <div style="position:relative;padding-top:56.25%;"><iframe id="panda-9967a7fc-eaf4-4641-87a4-1c50827a647c" src="https://player-vz-16f0bb92-9a3.tv.pandavideo.com.br/embed/?v=9967a7fc-eaf4-4641-87a4-1c50827a647c" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%" fetchpriority="high"></iframe></div>
+     <iframe id="panda-9967a7fc-eaf4-4641-87a4-1c50827a647c" src="https://player-vz-16f0bb92-9a3.tv.pandavideo.com.br/embed/?v=9967a7fc-eaf4-4641-87a4-1c50827a647c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
   </div>
 
   <!-- Botão de ação com delay em milissegundos -->
