--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     function delayedAction() {
       setTimeout(function() {
         // Código para ação desejada
-      }, 2000); // 2000 milissegundos = 2 segundos de delay
+      }, 20000000); // 2000 milissegundos = 2 segundos de delay
     }
   </script>
 
