--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <script>
     function delayedAction() {
       setTimeout(function() {
-        // Código para ação desejada
-      }, 20000000); // 2000 milissegundos = 2 segundos de delay
+        // Coloque aqui o código para a ação desejada
+      }, 60000); // 60000 milissegundos = 60 segundos de delay
     }
   </script>
 
