--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     window.onload = function() {
       setTimeout(function() {
         document.getElementById('action-button').style.display = 'block';
-      }, 300000); // 300000 milissegundos = 5 minutos de atraso
+      }, 300); // 300000 milissegundos = 5 minutos de atraso
     };
 
     function delayedAction() {
-      // Coloque aqui o código para a ação desejada
+      // Redirecionar para o Checkout em uma nova aba
+      window.open('https://www.google.com', '_blank');
     }
   </script>
 
