--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     function delayedAction() {
       // Redirecionar para o Checkout em uma nova aba
-      window.open('https://www.google.com', '_blank');
+      window.open('https://pay.kiwify.com.br/Km9HTBZ', '_blank');
     }
   </script>
 
