--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=640113214659894&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+  <meta name="facebook-domain-verification" content="k0acy2c3iuf7ay84j0257jpcji4od5" />
 </head>
 <body>
   <div class="header">
