--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ src="https://www.facebook.com/tr?id=595049225561756&ev=PageView&noscript=1"
   
   <!-- Vídeo centralizado -->
   <div id="video-container">
-     <iframe id="panda-9967a7fc-eaf4-4641-87a4-1c50827a647c" src="https://player-vz-16f0bb92-9a3.tv.pandavideo.com.br/embed/?v=9967a7fc-eaf4-4641-87a4-1c50827a647c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
+     <div id="vid_647e8e635ef7d10009b83238" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_647e8e635ef7d10009b83238" src="https://images.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/647e8e635ef7d10009b83238/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_647e8e635ef7d10009b83238" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_647e8e635ef7d10009b83238">var s=document.createElement("script");s.src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/647e8e635ef7d10009b83238/player.js",s.async=!0,document.head.appendChild(s);</script>
   </div>
 
   <!-- Botão de ação com atraso de 5 minutos -->
