--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ src="https://www.facebook.com/tr?id=595049225561756&ev=PageView&noscript=1"
     <img class="logo" src="assets/img/logo.svg" alt="Logo da Empresa">
   </div>
   
-  <h1 class="headline"> <span style="color: #E5AC5F;">Assista esse vídeo até o final </span>: e descubra como milhares de mamães estão ganhando dinheiro de suas casas com Inteligência Artificial.</h1>
+  <h1 class="headline"> <span style="color: #E5AC5F;">Assista esse vídeo até o final </span>e descubra como milhares de mamães estão ganhando dinheiro de suas casas com Inteligência Artificial.</h1>
   
   <!-- Vídeo centralizado -->
   <div id="video-container">
