--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img class="logo" src="assets/img/logo.svg" alt="Logo da Empresa">
   </div>
   
-  <h1 class="headline"> <span style="color: #ffffff;">Assista esse vídeo até o final e descubra como centenas de mamães estão ganhando dinheiro de suas casas com IA</h1>
+  <h1 class="headline"> <span style="color: #ffffff;">Descubra</span> como centenas de <span style="color: #FD546E;"> mamães </span> estão <span style="color: #FD546E;"> ganhando dinheiro </span> de suas casas com <span style="color: #FD546E;"> IA </span></h1>
   
   <!-- Vídeo centralizado -->
   <div id="video-container">
