--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ src="https://www.facebook.com/tr?id=595049225561756&ev=PageView
     <img class="logo" src="assets/img/logo.svg" alt="Logo da Empresa">
   </div>
   
-  <h1 class="headline"> <span style="color: #ffffff;">Descubra</span> como <span style="color: #FD546E;">mamães</span> estão ganhando dinheiro de suas casas com <span style="color: #FD546E;">Ferramentas Inteligentes</span></h1>
+  <h1 class="headline"> <span style="color: #ffffff;">Descubra</span> como <span style="color: #FD546E;">mamães</span> estão ganhando dinheiro de suas casas com uma <span style="color: #FD546E;">Nova Forma de Trabalho</span></h1>
   
   <!-- Vídeo centralizado -->
   <div id="video-container">
