--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <img src="assets/img/logo.svg" alt="Logo">
-    <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</h1>
-    <p class="subheadline">Assista o vídeo abaixo e descubra o segredo que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses com as redes sociais no mercado de Marketing de Influência à partir de 500 seguidores</p>
+    <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA <span class="highlighted-text">MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</span></h1>
+    <p class="subheadline">Assista o vídeo abaixo e descubra o <span style="color: #E5AC5F;"> segredo que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses</span> com as redes sociais no mercado de Marketing de Influência à partir de 500 seguidores</p>
   </header>
   <div class="content">
     <div class="video-container">
