--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seu Site</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
     <img src="assets/img/logo.svg" alt="Logo">
-    <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA <span class="highlighted-text">MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</span></h1>
-    <p class="subheadline">Assista o vídeo abaixo e descubra o <span style="color: #E5AC5F;"> segredo que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses</span> com as redes sociais no mercado de Marketing de Influência à partir de 500 seguidores</p>
+    <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA <span style="color: #E5AC5F;">MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</span></h1>
+    <p class="subheadline"> <span style="color: #E5AC5F;">Assista o vídeo abaixo e descubra o segredo</span> que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses com as redes sociais no mercado de Marketing de Influência <span class="highlighted-text">à partir de 500 seguidores</span></p>
   </header>
   <div class="content">
     <div class="video-container">
