--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
     </header>
 
-  <img src="assets/img/pt2-responsivo.svg" alt="Imagem Responsiva" class="responsive-image">
+  <img src="assets/img/pt2-responsivo.png" alt="Imagem Responsiva" class="responsive-image">
 
   <footer>
     Todos os direitos reservados &copy; 2023
