--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
   <title>Seu Site</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
-
 </head>
 <body>
   <header>
     <img src="assets/img/logo.svg" alt="Logo">
     <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA <span style="color: #E5AC5F;">MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</span></h1>
     <p class="subheadline"> <span style="color: #E5AC5F;">Assista o vídeo abaixo e descubra o segredo</span> que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses com as redes sociais no mercado de Marketing de Influência <span class="highlighted-text">à partir de 500 seguidores</span></p>
-  <div class="content">
-    <div class="video-container">
-      <iframe src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/649d0fd1898cc800097ab1ba/embed.html" frameborder="0" allowfullscreen></iframe>
+    <div class="content">
+      <div class="video-container">
+        <iframe src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/649d0fd1898cc800097ab1ba/embed.html" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <a href="#action-button-section" class="action-button" id="btnVendas">GARANTA SUA VAGA AGORA</a>
     </div>
-
-    <a href="https://www.google.com.br" target="_blank" class="action-button">GARANTA SUA VAGA AGORA</a>
-  </div>
-    </header>
+  </header>
 
   <img src="assets/img/pt2-responsivo.png" alt="Imagem Responsiva" class="responsive-image">
 
+  <img src="assets/img/pt3-responsivo.png" alt="Imagem Responsiva" class="responsive-image2"> 
+
+  <section id="action-button-section" class="new-section">
+    <a href="https://pay.kiwify.com.br/XME5dNA" target="_blank" class="action-button-black">GARANTA SUA VAGA COM DESCONTO</a>
+  </section>
+
   <footer>
-    Todos os direitos reservados &copy; 2023
+    Todos os direitos reservados Agência 3S &copy; 2023
   </footer>
 </body>
 </html>
