--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <img src="assets/img/pt3-responsivo.png" alt="Imagem Responsiva" class="responsive-image2"> 
 
   <section id="action-button-section" class="new-section">
-    <a href="https://pay.kiwify.com.br/XME5dNA" target="_blank" class="action-button-black">GARANTA SUA VAGA COM DESCONTO</a>
+    <a href="https://pay.kiwify.com.br/Km9HTBZ" target="_blank" class="action-button-black">GARANTA SUA VAGA COM DESCONTO</a>
   </section>
 
   <footer>
