--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p class="subheadline"> <span style="color: #E5AC5F;">Assista o vídeo abaixo e descubra o segredo</span> que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses com as redes sociais no mercado de Marketing de Influência <span class="highlighted-text">à partir de 500 seguidores</span></p>
     <div class="content">
       <div class="video-container">
-        <iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/64bade554d8d330009ae3074/embed.html" </iframe>
+        <iframe src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/64bade554d8d330009ae3074/embed.html" frameborder="0" allowfullscreen></iframe>
       </div>
       <a href="#action-button-section" class="action-button" id="btnVendas">GARANTA SUA VAGA AGORA</a>
     </div>
