--- a/index.html
+++ b/index.html
@@ -6,25 +6,33 @@
   <title>Treinadas para o Sucesso</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
-  
+
+  <style>
+    .action-button,
+    .responsive-image,
+    .responsive-image2,
+    .new-section {
+      display: none;
+    }
+  </style>
+
   <!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '2968768670106854');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=2968768670106854&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-  
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2968768670106854');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=2968768670106854&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 <body>
   <header>
@@ -41,7 +49,7 @@
 
   <img src="assets/img/pt2-responsivo.png" alt="Imagem Responsiva" class="responsive-image">
 
-  <img src="assets/img/pt3-responsivo.png" alt="Imagem Responsiva" class="responsive-image2"> 
+  <img src="assets/img/pt3-responsivo.png" alt="Imagem Responsiva" class="responsive-image2">
 
   <section id="action-button-section" class="new-section">
     <a href="https://pay.kiwify.com.br/Km9HTBZ" target="_blank" class="action-button-black">GARANTA SUA VAGA COM DESCONTO</a>
@@ -50,5 +58,24 @@
   <footer>
     Todos os direitos reservados Agência 3S &copy; 2023
   </footer>
+
+  <script>
+    // Obtém os elementos das classes usando querySelectorAll
+    const btnVendas = document.querySelector('.action-button');
+    const imgResponsive = document.querySelector('.responsive-image');
+    const imgResponsive2 = document.querySelector('.responsive-image2');
+    const newSection = document.querySelector('.new-section');
+
+    // Função para exibir o botão, as imagens e a seção após 11 minutos e 7 segundos
+    function exibirElementosComDelay() {
+      btnVendas.style.display = 'inline-block'; // Ou 'block', dependendo do comportamento desejado
+      imgResponsive.style.display = 'block'; // Ou 'inline-block', dependendo do comportamento desejado
+      imgResponsive2.style.display = 'block'; // Ou 'inline-block', dependendo do comportamento desejado
+      newSection.style.display = 'block'; // Ou 'block', dependendo do comportamento desejado
+    }
+
+    // Atrasa a exibição do botão, das imagens e da seção em 11 minutos e 7 segundos (11 minutos = 11 * 60 segundos)
+    setTimeout(exibirElementosComDelay, 11 * 60 * 1000 + 7 * 1000);
+  </script>
 </body>
 </html>
