--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
 
     // Atrasa a exibição do botão, das imagens e da seção em 11 minutos e 7 segundos (11 minutos = 11 * 60 segundos)
-    setTimeout(exibirElementosComDelay, 11 * 60 * 1000 + 7 * 1000);
+    setTimeout(exibirElementosComDelay, 667000);
   </script>
 </body>
 </html>
