--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </script>
   <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=2968768670106854&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=691882046121843&ev=PageView&noscript=1"          
   /></noscript>
   <!-- End Meta Pixel Code -->
 
