--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <img src="assets/img/pt3-responsivo.png" alt="Imagem Responsiva" class="responsive-image2">
 
   <section id="action-button-section" class="new-section">
-    <a href="https://wa.link/th5jek" target="_blank" class="action-button-black">GARANTA SUA VAGA COM DESCONTO</a>
+    <a href="https://pay.kiwify.com.br/Km9HTBZ" target="_blank" class="action-button-black">GARANTA SUA VAGA COM DESCONTO</a>
   </section>
 
   <footer>
